# agrtool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-actions-demo.yml
docs/: api.rst  conf.py  genindex.rst  getting_started.rst  index.rst  requirements.txt  usage.rst
src/agrtool/: __init__.py  check_compile_error.py  checklocal.py  cleanupfiles.py  combine_results.py  error_nocompile.py  error_nodriver.py  error_norun.py  guidance.py  leaderboard.py  rename_class.py
test/: test_check_compile.py  test_cleanupfiles.py
