[project]
name = "agrtool"
version = "0.0.1"
authors = [
  { name="Marianne Case Bezaire", email="mariannejcase@gmail.com" },
]
description = "A package to assist Gradescope autograding"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mbezaire/agrtool"
Issues = "https://github.com/mbezaire/agrtool/issues"

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"